--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -148,11 +148,11 @@ items:
     href: luis-how-to-start-new-app.md
   - name: Skapa modell
     items:
-    - name: Lägg till avsikter
+    - name: Lägga till avsikt
       href: luis-how-to-add-intents.md
-    - name: Lägg till yttranden
+    - name: Lägga till entitet i yttrande
       href: luis-how-to-add-example-utterances.md
-    - name: Lägg till entiteter
+    - name: Lägga till entitet utan yttrande
       href: luis-how-to-add-entities.md
     - name: Använd fördefinierade modeller
       items:
@@ -368,9 +368,9 @@ items:
     href: https://blog.botframework.com/category/luis/
   - name: Kunskapsbas
     href: https://cognitive.uservoice.com/knowledgebase/topics/127872-luis-language-understanding-intelligent-service
-ms.openlocfilehash: f946ab4262d078b8f645800cee9a8e98ee0e104c
-ms.sourcegitcommit: ccdea744097d1ad196b605ffae2d09141d9c0bd9
+ms.openlocfilehash: 43d36dd8f08508139bc74904c9c155b947ace52e
+ms.sourcegitcommit: 0f54b9dbcf82346417ad69cbef266bc7804a5f0e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49647059"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "50139677"
