--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -12,9 +12,9 @@ items:
   - name: Synkronisera Azure AD-användare till ett HDInsight-kluster
     href: ../hdinsight-sync-aad-users-to-cluster.md
     maintainContext: true
-  - name: Konfigurera Hive-principer
+  - name: Konfigurera Apache Hive-principer
     href: apache-domain-joined-run-hive.md
-  - name: Konfigurera Kafka-principer
+  - name: Apache Kafka RBAC med Apache Ranger
     href: apache-domain-joined-run-kafka.md
     maintainContext: true
   - name: Använda VSCode för att länka till ESP-kluster
@@ -100,9 +100,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 96a9db307d2493b93db4765a4a49ef4a51548469
-ms.sourcegitcommit: 6361a3d20ac1b902d22119b640909c3a002185b3
+ms.openlocfilehash: 08e08fba0b9957babd391cada4a665e5d99fdd90
+ms.sourcegitcommit: 48592dd2827c6f6f05455c56e8f600882adb80dc
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49365517"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "50155719"
