--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -56,6 +56,10 @@ items:
       href: classroom-labs/how-to-manage-lab-accounts.md
     - name: Hantera klassrumslabb
       href: classroom-labs/how-to-manage-classroom-labs.md
+    - name: Konfigurera och publicera mallar
+      href: classroom-labs/how-to-create-manage-template.md
+    - name: Konfigurera och kontrollera användning
+      href: classroom-labs/how-to-configure-student-usage.md
     - name: Åtkomst till klassrumslabb
       href: classroom-labs/how-to-use-classroom-lab.md
   - name: DevTest-labb
@@ -213,9 +217,9 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=devtest-lab
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/devtest-lab/
-ms.openlocfilehash: 401c41d1b91d6373dfb3c743e0c6f56332030b45
-ms.sourcegitcommit: 609c85e433150e7c27abd3b373d56ee9cf95179a
+ms.openlocfilehash: e3fa8ee01c57851d5ef851a1973feac38d430dba
+ms.sourcegitcommit: 0f54b9dbcf82346417ad69cbef266bc7804a5f0e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/03/2018
-ms.locfileid: "48247574"
+ms.lasthandoff: 10/26/2018
+ms.locfileid: "50138848"
