--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -31,6 +31,8 @@ items:
   items:
   - name: Vad är Key Vault?
     href: key-vault-whatis.md
+  - name: Säkra ditt nyckelvalv
+    href: key-vault-secure-your-key-vault.md
   - name: Säkerhetsvärldar
     href: key-vault-ovw-security-worlds.md
   - name: Mjuk borttagning
@@ -72,8 +74,6 @@ items:
     href: key-vault-soft-delete-powershell.md
   - name: Bevilja åtkomst med hjälp av grupper
     href: key-vault-group-permissions-for-apps.md
-  - name: Säkra ditt nyckelvalv
-    href: key-vault-secure-your-key-vault.md
   - name: Konfigurera brandväggar och virtuella nätverk
     href: key-vault-network-security.md
 - name: Referens
@@ -92,6 +92,10 @@ items:
     href: /python/api/overview/azure/key-vault?view=azure-python
   - name: REST
     href: /rest/api/keyvault
+  - name: Autentisering, begäranden och svar
+    href: authentication-requests-and-responses.md
+  - name: Vanliga parametrar och sidhuvuden
+    href: common-parameters-and-headers.md
   - name: Utveckla
     items:
     - name: Utvecklarguide
@@ -104,47 +108,39 @@ items:
       href: vs-secure-secret-appsettings.md
     - name: Tjänstautentisering med .NET
       href: service-to-service-authentication.md
-    - name: Arbeta med Visual Studio
-      items:
-      - name: Använda den anslutna tjänsten i Key Vault
-        href: vs-key-vault-add-connected-service.md
-      - name: Komma igång med ASP.NET-projekt
-        href: vs-key-vault-aspnet-get-started.md
-      - name: Vad hände med mitt ASP.NET-projekt?
-        href: vs-key-vault-aspnet-what-happened.md
-      - name: Komma igång med ASP.NET Core-projekt
-        href: vs-key-vault-aspnet-core-get-started.md
-      - name: Vad hände med mitt ASP.NET Core-projekt?
-        href: vs-key-vault-aspnet-core-what-happened.md
+    - name: Använda den anslutna tjänsten i Key Vault
+      href: vs-key-vault-add-connected-service.md
 - name: Resurser
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
     href: /learn/browse/?products=azure-key-vault
+  - name: Autentisering, begäranden och svar
+    href: authentication-requests-and-responses.md
+  - name: Vanliga parametrar och sidhuvuden
+    href: common-parameters-and-headers.md
   - name: Kundinformation
     href: key-vault-customer-data.md
   - name: Viktig information
     href: key-vault-versions.md
-  - name: Tjänst
-    items:
-    - name: Prissättning
-      href: https://azure.microsoft.com/pricing/details/key-vault/
-    - name: Regional tillgänglighet
-      href: https://azure.microsoft.com/global-infrastructure/services/?products=key-vault
-    - name: Serviceavtal (SLA)
-      href: https://azure.microsoft.com/support/legal/sla/key-vault/
-    - name: Tjänstbegränsningar
-      href: key-vault-service-limits.md
-    - name: Tjänststatus
-      href: https://azure.microsoft.com/status/
-    - name: Tjänstuppdateringar
-      href: https://azure.microsoft.com/updates/?product=key-vault
-  - name: Teamblogg
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/key-vault/
+  - name: Regional tillgänglighet
+    href: https://azure.microsoft.com/global-infrastructure/services/?products=key-vault
+  - name: Serviceavtal (SLA)
+    href: https://azure.microsoft.com/support/legal/sla/key-vault/
+  - name: Tjänstbegränsningar
+    href: key-vault-service-limits.md
+  - name: Tjänststatus
+    href: https://azure.microsoft.com/status/
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=key-vault
+  - name: Blogg
     href: http://blogs.technet.com/b/kv/
 - name: Produktfeedback
   href: https://feedback.azure.com/forums/906355-azure-key-vault
-ms.openlocfilehash: 64b4f6cbb26da244898d46b8fd5250a2eeeef91e
-ms.sourcegitcommit: 0f54b9dbcf82346417ad69cbef266bc7804a5f0e
+ms.openlocfilehash: e58f20767e6a3ae49eff17e5388b7abeb1dcaa65
+ms.sourcegitcommit: fbdfcac863385daa0c4377b92995ab547c51dd4f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/26/2018
-ms.locfileid: "50140950"
+ms.lasthandoff: 10/29/2018
+ms.locfileid: "50221333"
