--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -4,26 +4,33 @@ items:
 - name: Översikt
   items:
   - name: Översikt över Azure Resource Graph
+    displayName: resource manager, query language, rbac, permissions
     href: overview.md
 - name: Snabbstarter
   items:
   - name: Kör din första fråga – Azure CLI
+    displayName: extension, docker
     href: first-query-azurecli.md
   - name: Kör din första fråga – PowerShell
+    displayName: module, docker, Az.ResourceGraph
     href: first-query-powershell.md
   expanded: true
 - name: Exempel
   items:
   - name: Startfrågor
+    displayName: query language, data explorer, count, list, show
     href: ./samples/starter.md
   - name: Avancerade frågor
+    displayName: query language, data explorer, list, regex
     href: ./samples/advanced.md
   expanded: true
 - name: Begrepp
   items:
   - name: Förstå frågespråket
+    displayName: query language, data explorer, tabular, operators, functions
     href: ./concepts/query-language.md
   - name: Utforska dina Azure-resurser med resursgrafer
+    displayName: vms, public ip
     href: ./concepts/explore-resources.md
   expanded: true
 - name: Referens
@@ -38,9 +45,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: UserVoice
     href: https://feedback.azure.com/forums/915958-azure-governance
-ms.openlocfilehash: 3aa7384bfe8dda15167ab679f689e691e64278c9
-ms.sourcegitcommit: 9e179a577533ab3b2c0c7a4899ae13a7a0d5252b
+ms.openlocfilehash: 7f22ae5214cff0b5790e49bdf1a05c1af3277cb6
+ms.sourcegitcommit: 1d3353b95e0de04d4aec2d0d6f84ec45deaaf6ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49943714"
+ms.lasthandoff: 10/30/2018
+ms.locfileid: "50245879"
