--- a/articles/active-directory/hybrid/TOC.yml
+++ b/articles/active-directory/hybrid/TOC.yml
@@ -83,6 +83,8 @@ items:
       href: plan-connect-performance-factors.md
     - name: Så här loggar användarna in
       href: plan-connect-user-signin.md
+    - name: Ifyllnad av UserPrincipalName för Azure AD
+      href: plan-connect-userprincipalname.md
     - name: Att tänka på för instanser
       href: reference-connect-instances.md
     - name: Information om utformning av hybrididentitet
@@ -153,6 +155,8 @@ items:
       href: how-to-connect-fed-ssl-update.md
     - name: Hantera AD FS-förtroendet med Azure AD
       href: how-to-connect-azure-ad-trust.md
+    - name: Ändra hash-algoritm för O365 RP
+      href: how-to-connect-fed-sha256-guidance.md
     - name: Kompatibilitetslista för Azure AD-federation
       href: how-to-connect-fed-compatibility.md
     - name: Använda en SAML 2.0-server som IDP
@@ -287,9 +291,9 @@ items:
     href: reference-connect-sync-functions-reference.md
   - name: Kompatibilitetslista för Azure AD-federation
     href: how-to-connect-fed-compatibility.md
-ms.openlocfilehash: eda2a26a9bd3d5a484865a8458246506f24bb518
-ms.sourcegitcommit: 8e06d67ea248340a83341f920881092fd2a4163c
+ms.openlocfilehash: e5d89e467b9dd6b41e246c889f41ad9abe21182b
+ms.sourcegitcommit: 1d3353b95e0de04d4aec2d0d6f84ec45deaaf6ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/16/2018
-ms.locfileid: "49351940"
+ms.lasthandoff: 10/30/2018
+ms.locfileid: "50249685"
