--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -329,32 +329,30 @@ items:
       href: sql-database-monitor-tune-overview.md
     - name: Intelligent prestanda
       items:
-      - name: Fråga
+      - name: Justeringsrådgivning
         items:
-        - name: Intelligent frågebearbetning
-          href: https://docs.microsoft.com/sql/relational-databases/performance/intelligent-query-processing?toc=/azure/sql-database/toc.json
-        - name: Anpassningsbar frågebearbetning
-          href: https://docs.microsoft.com/sql/relational-databases/performance/adaptive-query-processing?toc=/azure/sql-database/toc.json
-      - name: Övervakning och justering
-        items:
-        - name: Prestandarekommendationer för Database Advisor
-          href: sql-database-advisor.md
         - name: Justeringsåtgärder och rekommendationer
           href: sql-database-performance.md
-        - name: Tillämpa prestandarekommendationer
-          href: sql-database-advisor-portal.md
-      - name: Intelligent Insights
-        items:
-        - name: Översikt över Intelligent Insights
-          href: sql-database-intelligent-insights.md
-        - name: Diagnostikloggning
-          href: sql-database-metrics-diag-logging.md
-        - name: Använda diagnostikloggen
-          href: sql-database-intelligent-insights-use-diagnostics-log.md
         - name: Query Performance Insight
           href: sql-database-query-performance.md
-        - name: Prestandafelsökning
+        - name: Prestandarekommendationer för Database Advisor
+          href: sql-database-advisor.md
+        - name: Tillämpa prestandarekommendationer
+          href: sql-database-advisor-portal.md
+      - name: Avancerad övervakning
+        items:
+        - name: Övervakning av Azure SQL-analys
+          href: https://docs.microsoft.com/en-us/azure/log-analytics/log-analytics-azure-sql
+        - name: Loggning av diagnostiktelemetri
+          href: sql-database-metrics-diag-logging.md
+      - name: Automatiserad felsökning
+        items:
+        - name: Intelligenta insikter om prestanda
+          href: sql-database-intelligent-insights.md
+        - name: Felsöka prestanda med Intelligent Insights
           href: sql-database-intelligent-insights-troubleshoot-performance.md
+        - name: Använda Intelligent Insights-diagnostikloggar
+          href: sql-database-intelligent-insights-use-diagnostics-log.md
       - name: Automatisk inställning
         items:
         - name: Översikt över automatisk justering
@@ -363,6 +361,12 @@ items:
           href: sql-database-automatic-tuning-enable.md
         - name: Aktivera e-postaviseringar
           href: sql-database-automatic-tuning-email-notifications.md
+      - name: Intelligent frågebearbetning
+        items:
+        - name: Intelligent frågebearbetning
+          href: https://docs.microsoft.com/sql/relational-databases/performance/intelligent-query-processing?toc=/azure/sql-database/toc.json
+        - name: Anpassningsbar frågebearbetning
+          href: https://docs.microsoft.com/sql/relational-databases/performance/adaptive-query-processing?toc=/azure/sql-database/toc.json
     - name: Manuell inställning
       items:
       - name: Manuell inställning
@@ -634,9 +638,9 @@ items:
     href: /azure/architecture/
   - name: Kundberättelser
     href: http://customers.microsoft.com/en-us/search?sq=%22Azure%20SQL%20Database%22&ff=&p=0&so=story_publish_date%20desc
-ms.openlocfilehash: 416f74c395f331de6af749f3de1d3a3e966b8b35
-ms.sourcegitcommit: ccdea744097d1ad196b605ffae2d09141d9c0bd9
+ms.openlocfilehash: c5e7a5265a7667acf462085f81c4b53c8d86236b
+ms.sourcegitcommit: fbdfcac863385daa0c4377b92995ab547c51dd4f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49650068"
+ms.lasthandoff: 10/29/2018
+ms.locfileid: "50221486"
