--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -99,9 +99,11 @@ items:
   - name: Konfigurera ExpressRoute-anslutningar och anslutningar för plats-till-plats som kan användas samtidigt
     href: expressroute-howto-coexist-resource-manager.md
   - name: Konfigurera ExpressRoute Direct
-    href: expressroute-howto-erdirect.md
-  - name: Konfigurera ExpressRoute Direct – CLI
-    href: expressroute-howto-expressroute-direct-cli.md
+    items:
+    - name: Konfigurera ExpressRoute Direct – PowerShell
+      href: expressroute-howto-erdirect.md
+    - name: Konfigurera ExpressRoute Direct – CLI
+      href: expressroute-howto-expressroute-direct-cli.md
   - name: Konfigurera routningsfilter för Microsoft-peering
     items:
     - name: Azure Portal
@@ -219,9 +221,9 @@ items:
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-microsoft-peering-for-your-expressroute-circuit/
     - name: Konfigurera offentlig peering för din krets
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-azure-public-peering-for-your-expressroute-circuit/
-ms.openlocfilehash: 1ca115b867cfe74c80bcd856b5212c7d1652482a
-ms.sourcegitcommit: 9e179a577533ab3b2c0c7a4899ae13a7a0d5252b
+ms.openlocfilehash: 775830771fb179168af41f2fc8537807dd6c44b1
+ms.sourcegitcommit: 6e09760197a91be564ad60ffd3d6f48a241e083b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49945645"
+ms.lasthandoff: 10/29/2018
+ms.locfileid: "50214978"
