--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -4,19 +4,24 @@ items:
 - name: Översikt
   items:
   - name: Översikt över Azure Policy
+    displayName: rbac, assign, initiative, parameters, count
     href: overview.md
 - name: Snabbstarter
   items:
   - name: Tilldela en princip – Portal
+    displayName: assign, compliance
     href: assign-policy-portal.md
   - name: Tilldela en princip – PowerShell
+    displayName: assign, compliance
     href: assign-policy-powershell.md
   - name: Tilldela en princip – Azure CLI
+    displayName: assign, compliance
     href: assign-policy-azurecli.md
   expanded: true
 - name: Självstudier
   items:
   - name: Skapa och hantera Azure Policy
+    displayName: assign, definition, compliance, exempt, exclusion
     href: ./tutorials/create-and-manage.md
 - name: Exempel
   href: ./samples/index.md
@@ -26,164 +31,222 @@ items:
     - name: Namngivning
       items:
       - name: Tillåt flera namnmönster
+        displayName: deny, indexed
         href: samples/allow-multiple-name-patterns.md
       - name: Kräv like-mönster
+        displayName: deny, indexed
         href: samples/enforce-like-pattern.md
       - name: Kräv matchningsmönster
+        displayName: deny, indexed
         href: samples/enforce-match-pattern.md
       - name: Kräv taggmatchningsmönster
+        displayName: deny, all
         href: samples/enforce-tag-match-pattern.md
     - name: Taggar
       items:
       - name: Använd taggen och dess standardvärde
+        displayName: append, builtin, concat
         href: samples/apply-tag-def-val.md
       - name: Principinitiativ för faktureringstaggar
         href: samples/billing-tags-policy-init.md
       - name: Framtvinga tagg och dess värde
+        displayName: deny, concat, builtin
         href: samples/enforce-tag-val.md
       - name: Lägg till tagg och dess värde i resursgrupper
+        displayName: deny, concat
         href: samples/enforce-tag-rg.md
     - name: Platser
       items:
       - name: Tillåtna platser
+        displayName: deny, builtin, location
         href: samples/allowed-locs.md
     - name: Resurstyper
       items:
       - name: Tillåtna resurstyper
+        displayName: deny, builtin, resourceTypes
         href: samples/allowed-res-types.md
       - name: Otillåtna resurstyper
+        displayName: deny, builtin, resourceTypes
         href: samples/not-allowed-res-type.md
   - name: Compute
     items:
     - name: Virtuella datorer
       items:
       - name: Tillåt anpassad avbildning av virtuell dator från en resursgrupp
+        displayName: deny, concat, ExistingResourceGroups
         href: samples/allow-custom-vm-image.md
       - name: Tillåtna SKU:er för lagringskonton och virtuella datorer
+        displayName: initiative, vmSKUs, storageSKUs
         href: samples/allowed-skus-storage.md
       - name: Godkända VM-avbildningar
+        displayName: deny
         href: samples/allowed-custom-images.md
       - name: Granska om ej tillgängligt tillägg
+        displayName: auditIfNotExists
         href: samples/audit-ext-not-exist.md
       - name: Otillåtna VM-tillägg
+        displayName: deny
         href: samples/not-allowed-vm-ext.md
     - name: Skalningsuppsättningar för virtuella datorer
       items:
       - name: Granska när VM inte använder hanterad disk
+        displayName: audit
         href: samples/create-vm-managed-disk.md
       - name: Skapa VM med hanterad disk
+        displayName: deny
         href: samples/use-managed-disk-vm.md
       - name: Neka Hybrid Use Benefit
+        displayName: deny
         href: samples/deny-hybrid-use.md
       - name: Endast tillåta en viss VM-plattformsavbildning
+        displayName: deny
         href: samples/allow-certain-vm-image.md
   - name: Data Lake
     items:
     - name: Kräv kryptering för Data Lake Store
+      displayName: deny
       href: samples/enforce-datalakestore-encryption.md
   - name: Övervakning
     items:
     - name: Granska diagnostikinställning
+      displayName: auditIfNotExists, resourceTypes
       href: samples/audit-diag-setting.md
   - name: Nätverk
     items:
     - name: Nätverksgränssnitt
       items:
       - name: NSG X på varje nätverkskort
+        displayName: deny
         href: samples/nsg-on-nic.md
       - name: Använda godkända undernät för VM-nätverksgränssnitt
+        displayName: deny
         href: samples/use-approved-subnet-vm-nics.md
       - name: Använda godkända vNet för VM-nätverksgränssnitt
+        displayName: deny, concat
         href: samples/use-approved-vnet-vm-nics.md
     - name: Virtuella nätverk
       items:
       - name: Tillåtna SKU:er för programgateway
+        displayName: deny
         href: samples/allowed-app-gate-sku.md
       - name: Ingen nätverkspeering till ER-nätverk
+        displayName: deny, all, concat, ExistingResourceGroups
         href: samples/no-peering-er-net.md
       - name: Ingen användardefinierad routningstabell
+        displayName: deny, all
         href: samples/no-user-def-route-table.md
       - name: NSG x i varje undernät
+        displayName: deny, all
         href: samples/nsg-on-subnet.md
       - name: Använda godkända undernät för VM-nätverksgränssnitt
+        displayName: deny
         href: samples/use-approved-subnet-vm-nics.md
       - name: Använda godkända vNet för VM-nätverksgränssnitt
+        displayName: deny
         href: samples/use-approved-vnet-vm-nics.md
     - name: Nätverkssäkerhetsgrupper
       items:
       - name: NSG X på varje nätverkskort
+        displayName: deny
         href: samples/nsg-on-nic.md
       - name: NSG x i varje undernät
+        displayName: deny, all
         href: samples/nsg-on-subnet.md
     - name: Express Routes
       items:
       - name: Tillåten ExpressRoute-bandbredd
+        displayName: deny
         href: samples/allowed-er-band.md
       - name: Tillåtna ExpressRoute-SKU:er
+        displayName: deny
         href: samples/allowed-er-skus.md
       - name: Tillåten peeringplats för ExpressRoute
+        displayName: deny, Location
         href: samples/allowed-peering-er.md
     - name: Nätverksbevakare
       items:
       - name: Granska om Network Watcher inte är aktiverat för regionen
+        displayName: auditIfNotExists, Location
         href: samples/net-watch-not-enabled.md
     - name: Programgateways
       items:
       - name: Tillåtna SKU:er för programgateway
+        displayName: deny
         href: samples/allowed-app-gate-sku.md
   - name: SQL
     items:
     - name: SQL Servrar
       items:
       - name: Granska när det saknas Azure AD-administratör
+        displayName: auditIfNotExists
         href: samples/audit-no-aad-admin.md
       - name: Granska inställningar för hotidentifiering på servernivå
+        displayName: auditIfNotExists
         href: samples/audit-sql-ser-threat-det-setting.md
       - name: Granska granskningsinställningar för SQL Server
+        displayName: auditIfNotExists, builtin
         href: samples/sql-server-audit.md
       - name: Granska granskningsinställningar på SQL-servernivå
+        displayName: auditIfNotExists
         href: samples/audit-sql-ser-leve-audit-setting.md
       - name: Kräv SQL Server version 12.0
+        displayName: deny, builtin
         href: samples/req-sql-12.md
     - name: SQL Databases
       items:
       - name: Tillåtna SKU:er för SQL DB
+        displayName: deny
         href: samples/allowed-sql-db-skus.md
       - name: Granska SQL DB-nivå för hotidentifiering på servernivå
+        displayName: auditIfNotExists
         href: samples/audit-db-threat-det-setting.md
       - name: Granska SQL DB-kryptering
+        displayName: auditIfNotExists, disabled, indexed, builtin
         href: samples/sql-database-encryption-audit.md
       - name: Granska granskningsinställning på SQL DB-nivån
+        displayName: auditIfNotExists
         href: samples/audit-sql-db-audit-setting.md
   - name: Storage
     items:
     - name: Tillåtna SKU:er för lagringskonto och virtuella datorer
+      displayName: initiative, vmSKUs, storageSKUs
       href: samples/allowed-skus-storage.md
     - name: Tillåtna SKU:er för lagringskonto
+      displayName: deny, builtin, storageSKUs
       href: samples/allowed-stor-acct-skus.md
     - name: Neka lågfrekvent åtkomstnivå för lagringskonton
+      displayName: deny, all
       href: samples/deny-cool-access-tiering.md
     - name: Garantera endast HTTPS-trafik för lagringskonto
+      displayName: deny, all
       href: samples/ensure-https-stor-acct.md
     - name: Garantera kryptering för lagringsfil
+      displayName: deny, all
       href: samples/ensure-store-file-enc.md
     - name: Kräver kryptering för lagringskonto
+      displayName: deny, builtin
       href: samples/req-store-acct-enc.md
 - name: Begrepp
   items:
   - name: Azure Policy-definitionsstruktur
+    displayName: parameters, location, rule, alias, initiatives
     href: ./concepts/definition-structure.md
   - name: Förstå Policy-effekter
+    displayName: order, evaluation
     href: ./concepts/effects.md
   - name: Granska virtuella datorer med gästkonfiguration
+    displayName: provider, tools, definition
     href: ./concepts/guest-configuration.md
 - name: Instruktionsguider
   items:
   - name: Skapa principer programmässigt
+    displayName: assign, definition
     href: ./how-to/programmatically-create.md
   - name: Hämta data för efterlevnad
+    displayName: evaluation, scan, summarize, query, events, log analytics
     href: ./how-to/getting-compliance-data.md
   - name: Åtgärda icke-kompatibla resurser
+    displayName: managed identity, task, definition, roleDefinitionIds
     href: ./how-to/remediate-resources.md
 - name: Referens
   items:
@@ -227,9 +290,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: UserVoice
     href: https://feedback.azure.com/forums/915958-azure-governance
-ms.openlocfilehash: ba412513631e9a130e3f95ac772e6d0076c63071
-ms.sourcegitcommit: fbdfcac863385daa0c4377b92995ab547c51dd4f
+ms.openlocfilehash: 3fbe1f250dbf07fc27f9fda58f6ea85347066018
+ms.sourcegitcommit: 1d3353b95e0de04d4aec2d0d6f84ec45deaaf6ae
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/29/2018
-ms.locfileid: "50221469"
+ms.lasthandoff: 10/30/2018
+ms.locfileid: "50248378"
