--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -16,28 +16,28 @@ items:
   expanded: true
 - name: Självstudier
   items:
-  - name: Få insikter vid gränsen
-    items:
-    - name: Filtrera data med Azure Functions
-      href: tutorial-deploy-function.md
-    - name: Hitta medelvärden med ASA
-      href: tutorial-deploy-stream-analytics.md
-    - name: Bedöma data med Azure ML
-      href: tutorial-deploy-machine-learning.md
-    - name: Filtrera data med anpassad kod
-      items:
-      - name: C#
-        href: tutorial-csharp-module.md
-      - name: Python
-        href: tutorial-python-module.md
-      - name: Node.js
-        href: tutorial-node-module.md
-      - name: Java
-        href: tutorial-java-module.md
-      - name: C
-        href: tutorial-c-module.md
+  - name: Filtrera data med Azure Functions
+    href: tutorial-deploy-function.md
+  - name: Hitta medelvärden med ASA
+    href: tutorial-deploy-stream-analytics.md
+  - name: Bedöma data med Azure ML
+    href: tutorial-deploy-machine-learning.md
+  - name: Klassificera bilder med Custom Vision
+    href: tutorial-deploy-custom-vision.md
   - name: Lagra data lokalt med SQL
     href: tutorial-store-data-sql-server.md
+  - name: Utveckla anpassade kodmoduler
+    items:
+    - name: C#
+      href: tutorial-csharp-module.md
+    - name: Python
+      href: tutorial-python-module.md
+    - name: Node.js
+      href: tutorial-node-module.md
+    - name: Java
+      href: tutorial-java-module.md
+    - name: C
+      href: tutorial-c-module.md
 - name: Begrepp
   items:
   - name: IoT Edge-körning
@@ -136,10 +136,10 @@ items:
       href: how-to-deploy-monitor-cli.md
   - name: Använda Edge-enheter som gatewayer
     items:
-    - name: Transparent gateway (Linux)
-      href: how-to-create-transparent-gateway-linux.md
-    - name: Transparent gateway (Windows)
-      href: how-to-create-transparent-gateway-windows.md
+    - name: Konfigurera en transparent gateway
+      href: how-to-create-transparent-gateway.md
+    - name: Ansluta en underordnad enhet
+      href: how-to-connect-downstream-device.md
     - name: Modbus-protokollgateway
       href: deploy-modbus-gateway.md
   - name: Konfigurera proxyinställningar
@@ -220,9 +220,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: fa5d551c95493361cac9d661938b50fb9ad2fed6
-ms.sourcegitcommit: 6f59cdc679924e7bfa53c25f820d33be242cea28
+ms.openlocfilehash: 625545123d9cbd4c587667bb7bf4e1eda8984a6d
+ms.sourcegitcommit: 799a4da85cf0fec54403688e88a934e6ad149001
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/05/2018
-ms.locfileid: "48816318"
+ms.lasthandoff: 11/02/2018
+ms.locfileid: "50913495"
