--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -192,8 +192,6 @@ items:
         href: programming.md
       - name: SQL-datapartitionering
         href: sql-api-partition-data.md
-      - name: Felsöka Java Async SDK
-        href: troubleshoot-java-async-sdk.md
       - name: Datatyper
         items:
         - name: DateTime
@@ -485,6 +483,10 @@ items:
     items:
     - name: Om bibliotek för massexecutor
       href: bulk-executor-overview.md
+- name: Felsökningsguider
+  items:
+  - name: Felsöka Java Async SDK
+    href: troubleshoot-java-async-sdk.md
 - name: Resurser
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
@@ -513,9 +515,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: b1e5e353d461f685593bce86be51ef4f133ddc99
-ms.sourcegitcommit: ae45eacd213bc008e144b2df1b1d73b1acbbaa4c
+ms.openlocfilehash: bb18835e9bd413867b9cd8f7fe8c58d525c79875
+ms.sourcegitcommit: ada7419db9d03de550fbadf2f2bb2670c95cdb21
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50740475"
+ms.lasthandoff: 11/02/2018
+ms.locfileid: "50963956"
