--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -10,12 +10,10 @@ items:
     href: quick-start.md
   - name: Använda .NET SDK
     items:
-    - name: Kontrollera avbildningsinnehåll
+    - name: Analysera avbildningsinnehåll och leta efter stötande material
       href: image-moderation-quickstart-dotnet.md
-    - name: Kontrollera textinnehåll
+    - name: Analysera textinnehåll och leta efter stötande material
       href: text-moderation-quickstart-dotnet.md
-    - name: Kontrollera videoinnehåll
-      href: video-moderation-api.md
 - name: Begrepp
   items:
   - name: Bildmoderering
@@ -36,6 +34,8 @@ items:
       items:
       - name: Använda .NET SDK
         items:
+        - name: Kontrollera videoinnehåll
+          href: video-moderation-api.md
         - name: Kontrollera avbildningar mot anpassade listor
           href: image-lists-quickstart-dotnet.md
         - name: Kontrollera text mot anpassade termer
@@ -142,9 +142,9 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
   - name: Webbseminarium på begäran
     href: https://info.microsoft.com/cognitive-services-content-moderator-ondemand.html
-ms.openlocfilehash: d162bcaefdde1aceb171d2ad83b5386e54cea890
-ms.sourcegitcommit: 9e179a577533ab3b2c0c7a4899ae13a7a0d5252b
+ms.openlocfilehash: 03363242d1a3764415e9bdc5b985b7fa76076901
+ms.sourcegitcommit: 00dd50f9528ff6a049a3c5f4abb2f691bf0b355a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/23/2018
-ms.locfileid: "49944166"
+ms.lasthandoff: 11/05/2018
+ms.locfileid: "51012827"
