--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -168,6 +168,18 @@ items:
       href: backup-dpm-automation.md
     - name: Windows Server i Azure Portal
       href: backup-client-automation.md
+  - name: Använda Azure Backup REST API
+    items:
+    - name: Skapa Recovery Services-valv
+      href: backup-azure-arm-userestapi-createorupdatevault.md
+    - name: Skapa och uppdatera säkerhetskopieringspolicy
+      href: backup-azure-arm-userestapi-createorupdatepolicy.md
+    - name: Säkerhetskopiera virtuella Azure-datorer
+      href: backup-azure-arm-userestapi-backupazurevms.md
+    - name: Återställa virtuella Azure-datorer
+      href: backup-azure-arm-userestapi-restoreazurevms.md
+    - name: Hantera Azure Backup-jobb
+      href: backup-azure-arm-userestapi-managejobs.md
   - name: SQL på virtuella Azure-datorer
     items:
     - name: Säkerhetskopiera SQL-databas i Azure
@@ -236,9 +248,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=backup
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=backup
-ms.openlocfilehash: d98a747f8805abdbef529a50c0b2c2d5a17e3106
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 7fa1f1c5ee528154225249da213f47a8817abd86
+ms.sourcegitcommit: 02ce0fc22a71796f08a9aa20c76e2fa40eb2f10a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46972629"
+ms.lasthandoff: 11/08/2018
+ms.locfileid: "51287480"
