--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -36,6 +36,8 @@ items:
         href: data-box-gateway-manage-users.md
       - name: Bandwidth-scheman
         href: data-box-gateway-manage-bandwidth-schedules.md
+      - name: Åtkomst, ström, anslutning
+        href: data-box-gateway-manage-access-power-connectivity-mode.md
     - name: Felsöka
       href: data-box-gateway-troubleshoot.md
   - name: Viktig information
@@ -76,9 +78,9 @@ items:
     href: https://azure.microsoft.com/services/storage/databox/edge/
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/storage/databox/edge/
-ms.openlocfilehash: a50831c5e53226d7432010461b8295042cb2c5df
-ms.sourcegitcommit: da3459aca32dcdbf6a63ae9186d2ad2ca2295893
+ms.openlocfilehash: dd349fb32ae6d360d1fbf986fe0642503939ce69
+ms.sourcegitcommit: 5a1d601f01444be7d9f405df18c57be0316a1c79
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/07/2018
-ms.locfileid: "51253966"
+ms.lasthandoff: 11/10/2018
+ms.locfileid: "51514511"
