--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f7b1213b7c3a6074f85c74825ed30c0b7ba8b98b
-ms.sourcegitcommit: 4eddd89f8f2406f9605d1a46796caf188c458f64
+ms.openlocfilehash: dd5817cd2c6c3ce3e1205136232253c42a6b1ab6
+ms.sourcegitcommit: d372d75558fc7be78b1a4b42b4245f40f213018c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/11/2018
-ms.locfileid: "49116010"
+ms.lasthandoff: 11/09/2018
+ms.locfileid: "51298566"
 documentType: LandingData
 title: Dokumentation om Azure Machine Learning-tjänst (förhandsversion)
 metadata:
@@ -58,8 +58,9 @@ sections:
   - type: list
     style: unordered
     items:
-    - html: <a href="http://aka.ms/aml-sdk">Azure Machine Learning-SDK för Python (huvud-SDK)</a>
     - html: <a href="http://aka.ms/data-prep-sdk">Azure Machine Learning-SDK för dataförberedelse</a>
+    - html: <a href="http://aka.ms/aml-sdk">Azure Machine Learning-SDK för Python (huvud-SDK)</a>
+    - html: <a href="https://aka.ms/aml-monitoring-sdk">Azure Machine Learning Monitoring SDK</a>
 - title: Andra Azure Machine Learning-tekniker
   items:
   - type: list
