--- a/articles/machine-learning/team-data-science-process/toc.yml
+++ b/articles/machine-learning/team-data-science-process/toc.yml
@@ -121,31 +121,34 @@ items:
       href: plan-your-environment.md
   - name: Skaffa och förstå data
     items:
-    - name: Hantera datalogistik
+    - name: Mata in data
+      displayName: move data, manage data logistics
       items:
       - name: Översikt
         href: ingest-data.md
-      - name: Blob Storage
-        href: move-azure-blob.md
-      - name: Använda Storage Explorer
-        href: move-data-to-azure-blob-using-azure-storage-explorer.md
-      - name: Använda AzCopy
-        href: move-data-to-azure-blob-using-azcopy.md
-      - name: Använda Python
-        href: ../../storage/blobs/storage-python-how-to-use-blob-storage.md
-        maintainContext: true
-      - name: Använda SSIS
-        href: move-data-to-azure-blob-using-ssis.md
-      - name: Flytta till en virtuell dator
+      - name: Flytta till/från Blob Storage
+        items:
+        - name: Översikt
+          href: move-azure-blob.md
+        - name: Använda Storage Explorer
+          href: move-data-to-azure-blob-using-azure-storage-explorer.md
+        - name: Använda AzCopy
+          href: move-data-to-azure-blob-using-azcopy.md
+        - name: Använda Python
+          href: ../../storage/blobs/storage-python-how-to-use-blob-storage.md
+          maintainContext: true
+        - name: Använda SSIS
+          href: move-data-to-azure-blob-using-ssis.md
+      - name: Flytta till SQL på en virtuell dator
         href: move-sql-server-virtual-machine.md
-      - name: Flytta till SQL Database
+      - name: Flytta till Azure SQL Database
         href: move-sql-azure.md
-      - name: Läsa in till Hive-tabeller
+      - name: Flytta till Hive-tabeller
         href: move-hive-tables.md
-      - name: Läsa in från en lokal SQL
-        href: move-sql-azure-adf.md
-      - name: Läsa in från SQL-partitionstabeller
+      - name: Flytta till SQL-partitionerade tabeller
         href: parallel-load-sql-partitioned-tables.md
+      - name: Flytta från lokalt SQL
+        href: move-sql-azure-adf.md
     - name: Utforska och visualisera data
       items:
       - name: Förbereda data
@@ -154,11 +157,11 @@ items:
         items:
         - name: Översikt
           href: explore-data.md
-        - name: Använda Pandas
+        - name: Utforska Azure Blob Storage
           href: explore-data-blob.md
-        - name: Använda SQL VM
+        - name: Utforska SQL på en virtuell dator
           href: explore-data-sql-server.md
-        - name: Använda Hive-tabeller
+        - name: Utforska Hive-tabeller
           href: explore-data-hive-tables.md
       - name: Exempeldata
         items:
@@ -235,9 +238,9 @@ items:
       items:
       - name: Översikt
         href: cortana-analytics-playbook-vehicle-telemetry.md
-      - name: Playbook
+      - name: 'Spelbok: Djupdykning'
         href: cortana-analytics-playbook-vehicle-telemetry-deep-dive.md
-      - name: Konfiguration
+      - name: Power BI-installation
         href: cortana-analytics-playbook-vehicle-telemetry-powerbi.md
 - name: Resurser
   items:
@@ -269,9 +272,9 @@ items:
       href: http://stackoverflow.com/questions/tagged/azure-machine-learning
     - name: Videoklipp
       href: https://azure.microsoft.com/resources/videos/index/?services=machine-learning
-ms.openlocfilehash: 7a0e7527b62fec7e3c0d65ad59f53709a13039eb
-ms.sourcegitcommit: 9d7391e11d69af521a112ca886488caff5808ad6
+ms.openlocfilehash: 64047bdb6dc25a2e31c2c5e282e7706194ff0733
+ms.sourcegitcommit: 96527c150e33a1d630836e72561a5f7d529521b7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/25/2018
-ms.locfileid: "50092482"
+ms.lasthandoff: 11/09/2018
+ms.locfileid: "51344679"
