--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -100,6 +100,8 @@ items:
     items:
     - name: Anslutningsbibliotek
       href: concepts-connection-libraries.md
+    - name: Anslutningsåterhämtning
+      href: concepts-connectivity.md
 - name: Instruktionsguider
   items:
   - name: Skapa användare
@@ -140,6 +142,10 @@ items:
     items:
     - name: Skapa aviseringar för mått
       href: howto-alert-on-metric.md
+  - name: Felsöka
+    items:
+    - name: Felsöka anslutningsfel
+      href: howto-troubleshoot-common-connection-issues.md
   - name: Advanced Threat Protection
     items:
     - name: Azure Portal
@@ -198,9 +204,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: cd05ba229be03190dfd43a17fe24f750bdaf57d9
-ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
+ms.openlocfilehash: 72cb09c49c25cd994a66ab0e32a324aeefeb06a7
+ms.sourcegitcommit: ba4570d778187a975645a45920d1d631139ac36e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/24/2018
-ms.locfileid: "49986500"
+ms.lasthandoff: 11/08/2018
+ms.locfileid: "51280137"
