commit translated contents

--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -452,38 +452,40 @@ items:
       href: service-fabric-backuprestoreservice-quickstart-standalonecluster.md
     - name: Migrera gamla Java-program som stöder Maven
       href: service-fabric-migrate-old-javaapp-to-use-maven.md
-  - name: Arbeta i en Windows/VS-utvecklarmiljö
+  - name: Arbeta i IDE
     items:
-    - name: Hantera program i Visual Studio
-      href: service-fabric-manage-application-in-visual-studio.md
-    - name: Konfigurera säkra anslutningar i Visual Studio
-      href: service-fabric-visualstudio-configure-secure-connections.md
-    - name: Felsöka en .NET-tjänst i VS
-      href: service-fabric-debugging-your-application.md
-    - name: Felsöka Windows-containrar med Service Fabric och VS
-      href: service-fabric-how-to-debug-windows-containers.md
-    - name: Vanliga fel och undantag
-      href: service-fabric-errors-and-exceptions.md
-    - name: Övervaka och diagnostisera lokalt
-      href: service-fabric-diagnostics-how-to-monitor-and-diagnose-services-locally.md
-    - name: Konfigurera ett Linux-kluster på Windows
-      href: service-fabric-local-linux-cluster-windows.md
-  - name: Arbeta i en Linux/Eclipse-utvecklarmiljö
-    items:
-    - name: Komma igång med Eclipse-plugin för utveckling med Java
-      href: service-fabric-get-started-eclipse.md
-    - name: Felsök en Java-tjänst i Eclipse
-      href: service-fabric-debugging-your-application-java.md
-    - name: Övervaka och diagnostisera lokalt
-      href: service-fabric-diagnostics-how-to-monitor-and-diagnose-services-locally-linux.md
-  - name: Arbeta i en VS Code-miljö
-    items:
-    - name: Kom igång med VS Code
-      href: service-fabric-get-started-vs-code.md
-    - name: Utveckla C# Service Fabric-program med VS Code
-      href: service-fabric-develop-csharp-applications-with-vs-code.md
-    - name: Utveckla Java Service Fabric-program med VS Code
-      href: service-fabric-develop-java-applications-with-vs-code.md
+    - name: Arbeta i en Windows/VS-utvecklarmiljö
+      items:
+      - name: Hantera program i Visual Studio
+        href: service-fabric-manage-application-in-visual-studio.md
+      - name: Konfigurera säkra anslutningar i Visual Studio
+        href: service-fabric-visualstudio-configure-secure-connections.md
+      - name: Felsöka en .NET-tjänst i VS
+        href: service-fabric-debugging-your-application.md
+      - name: Felsöka Windows-containrar med Service Fabric och VS
+        href: service-fabric-how-to-debug-windows-containers.md
+      - name: Vanliga fel och undantag
+        href: service-fabric-errors-and-exceptions.md
+      - name: Övervaka och diagnostisera lokalt
+        href: service-fabric-diagnostics-how-to-monitor-and-diagnose-services-locally.md
+      - name: Konfigurera ett Linux-kluster på Windows
+        href: service-fabric-local-linux-cluster-windows.md
+    - name: Arbeta i en Linux/Eclipse-utvecklarmiljö
+      items:
+      - name: Komma igång med Eclipse-plugin för utveckling med Java
+        href: service-fabric-get-started-eclipse.md
+      - name: Felsök en Java-tjänst i Eclipse
+        href: service-fabric-debugging-your-application-java.md
+      - name: Övervaka och diagnostisera lokalt
+        href: service-fabric-diagnostics-how-to-monitor-and-diagnose-services-locally-linux.md
+    - name: Arbeta i en VS Code-miljö
+      items:
+      - name: Kom igång med VS Code
+        href: service-fabric-get-started-vs-code.md
+      - name: Utveckla C# Service Fabric-program med VS Code
+        href: service-fabric-develop-csharp-applications-with-vs-code.md
+      - name: Utveckla Java Service Fabric-program med VS Code
+        href: service-fabric-develop-java-applications-with-vs-code.md
   - name: Migrera från Cloud Services
     items:
     - name: Jämför Cloud Services med Service Fabric
@@ -761,9 +763,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: 33a243d89888bcb34d9c23a100643876f6eb4b53
-ms.sourcegitcommit: da3459aca32dcdbf6a63ae9186d2ad2ca2295893
+ms.openlocfilehash: a7549a3544fb40527e0526bfb5c7db424b0d014a
+ms.sourcegitcommit: 6b7c8b44361e87d18dba8af2da306666c41b9396
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/07/2018
-ms.locfileid: "51241301"
+ms.lasthandoff: 11/12/2018
+ms.locfileid: "51567816"
