--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2a713200436f0f9ce0f3c12fab2f09f2bef42828
-ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
+ms.openlocfilehash: 6551fce71d9e75f3de185ca5eaa9c0ad1dc4c11c
+ms.sourcegitcommit: 6b7c8b44361e87d18dba8af2da306666c41b9396
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47159167"
+ms.lasthandoff: 11/12/2018
+ms.locfileid: "51569224"
 documentType: LandingData
 title: Dokumentation om QnA Maker
 metadata:
@@ -18,10 +18,10 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 09/12/2018
+  ms.date: 11/10/2018
   ms.author: tulasim
 abstract:
-  description: <a href="https://qnamaker.ai">Med QnA Maker</a> kan du driva en tjänst för frågor och svar från halvstrukturerat innehåll som Vanliga frågor och svar-dokument, URL:er och produkthandböcker.
+  description: Med QnA Maker kan du driva en tjänst för frågor och svar från halvstrukturerat innehåll som Vanliga frågor och svar-dokument, URL:er och produkthandböcker.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
